@@ -1,4 +1,5 @@
 0.9-4
+- oceBisect(): increase generality of function whose root is sought
 - plotTS(): clean axes after isopycnals drawn
 - teos10: update test values (with help from PB)
 - read.adp.nortek(): handle missing 'to' argument as documented
